# gemma-coreml-chat

./: .gitignore  AGENTS.md  LICENSE  README.md  implementation_plan_dynamic_context.md  pyproject.toml
.cursor/rules/: minimal-api-surface.mdc
.github/: copilot-instructions.md
GemmaCore/: Package.swift
GemmaCore/Sources/GemmaCore/: ChatMessage.swift  CoreMLModel.swift  GemmaConfig.swift  GemmaTokenizer.swift  InferenceEngine.swift  (+3 more)
benchmarks/: README.md  cli.py  multifunction_rangedim_bug.py  multifunction_rangedim_bug.swift  plot.py  power.py  prompts.py  runner.py
benchmarks/results/: benchmark_20260415_094016.json
benchmarks/swift/: .gitignore  model_bench.swift
cli/: Package.swift
gemma_chat/: cache_spec.py  chat.py  compare_inference.py  config.py  decode_coreml.py  decode_jax.py  export.py  export_decode.py  generate.py  jax_generate.py  materialize.py  model.py  parity_decode.py  stablehlo_streaming_patch.py  tui_app.py  weight_mapper.py
gemma_chat/mil_passes/: __init__.py  collapse_cast_chains.py  collapse_reshape_chains.py  collapse_transpose_chains.py  ct_convert_pipeline.py  fuse_attention_to_sdpa.py  fuse_logit_softcap.py  fuse_reduce_sum_to_mean.py  quantize_const_weights.py  remove_broadcast_tiles.py  remove_redundant_maximum.py  replace_decomposed_softmax.py  replace_erf_gelu.py  replace_scalar_broadcasts.py
ios/GemmaChat/: project.yml
tests/: test_broadcast_tiles.py  test_enumerated_vs_range.py  test_materialize_memory.py  test_materialize_roundtrip.py  test_multifunction_dynamic.py  test_sdpa_fusion.py  test_softcap_fusion.py
(+18 files in other folders)
