[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gemma_chat", "benchmarks"]

[project]
name = "gemma-coreml-chat"
version = "0.1.0"
description = "Chat application using Gemma4-E2B exported to CoreML via stablehlo-coreml"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax==0.9.1",
    "flax>=0.12.5",
    "numpy~=2.0",
    "coremltools>=9.0",
    "stablehlo-coreml>=0.1.1",
    "transformers>=4.50",
    "huggingface_hub>=0.24",
    "flatbuffers",
    "einops",
    "jinja2>=3.1.6",
    "accelerate>=1.13.0",
]

[project.scripts]
# Export prefill + decode CoreML models (run once, ~10-30 min):
gemma-export = "gemma_chat.export:main"
# Materialize a dynamic-shape .mlpackage into a concrete multifunction one
# (ANE-compatible; one function per power-of-2 cache size):
gemma-materialize = "gemma_chat.materialize:main"
# Orchestrates the GemmaBench Swift binary across the backend × context
# matrix and generates plots (requires Xcode for the Swift build):
gemma-bench = "benchmarks.cli:main"

[dependency-groups]
dev = [
    "matplotlib>=3.9",
    "pillow>=12.2.0",
    "pytest>=9.0.3",
]
